# rusty-board

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  REMOVE  ROADMAP.md  docker-compose.override.yml  docker-compose.yml  schema.sql
cmd/rusty-board/: Cargo.toml  README.md
cmd/rusty-board/src/: composition.rs  main.rs
cmd/seed/: Cargo.toml
crates/api-adapters/: Cargo.toml  README.md
crates/api-adapters/src/: lib.rs
crates/api-adapters/src/actix/: mod.rs
crates/api-adapters/src/axum/: error.rs  health.rs  metrics.rs  mod.rs  templates.rs
crates/api-adapters/src/axum/handlers/: admin_handlers.rs  auth_handlers.rs  board_handlers.rs  board_owner_handlers.rs  mod.rs  moderation_handlers.rs  overboard_handlers.rs  post_handlers.rs  staff_message_handlers.rs  thread_handlers.rs  user_handlers.rs  volunteer_handlers.rs
crates/api-adapters/src/axum/middleware/: accept.rs  auth.rs  board_config.rs  cors.rs  login_guard.rs  mod.rs  request_id.rs  security_headers.rs
crates/api-adapters/src/axum/routes/: admin_routes.rs  auth_routes.rs  board_owner_routes.rs  board_routes.rs  mod.rs  moderation_routes.rs  overboard_routes.rs  post_routes.rs  staff_message_routes.rs  thread_routes.rs  user_routes.rs
crates/api-adapters/src/common/: dtos.rs  errors.rs  mod.rs  pagination.rs
crates/api-adapters/templates/: admin_dashboard.html  archive.html  audit_log.html  base.html  board.html  board_owner_dashboard.html  catalog.html  dashboard.html  login.html  mod_flags.html  moderator_dashboard.html  overboard.html  register.html  search_results.html  staff_compose.html  staff_inbox.html  thread.html  user_dashboard.html  volunteer_dashboard.html
crates/api-adapters/tests/: board_handlers.rs
crates/auth-adapters/: Cargo.toml  README.md
crates/auth-adapters/src/: lib.rs
crates/auth-adapters/src/common/: hashing.rs  mod.rs
crates/auth-adapters/src/cookie_session/: mod.rs
crates/auth-adapters/src/jwt_bearer/: errors.rs  mod.rs
crates/configs/: Cargo.toml  README.md
crates/configs/src/: defaults.rs  lib.rs
crates/domains/: Cargo.toml  README.md
crates/integration-tests/: Cargo.toml  README.md
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: api_admin.rs  api_auth.rs  api_board.rs  api_board_owner.rs  api_moderation.rs  api_post.rs  api_user.rs  board_service.rs  domain_models.rs  fixtures.rs  media_upload.rs  port_contracts.rs  post_service.rs  thread_service.rs  utils.rs
crates/rb-api/: Cargo.toml
crates/rb-api/src/: handlers.rs  lib.rs  middleware.rs
crates/rb-core/: Cargo.toml
crates/rb-plugins/rb-db-sqlite/: Cargo.toml
crates/rb-plugins/rb-db-sqlite/migrations/: 001_initial_schema.sql
crates/rb-plugins/rb-db-sqlite/src/: lib.rs
crates/rb-plugins/rb-storage-local/: Cargo.toml
crates/rb-plugins/rb-storage-local/src/: lib.rs
crates/rb-ui/: Cargo.toml
crates/services/: Cargo.toml  README.md
crates/services/src/: lib.rs
crates/services/src/board/: errors.rs  mod.rs
crates/services/src/common/: errors.rs  mod.rs  tripcode.rs  utils.rs
crates/services/src/moderation/: errors.rs  mod.rs
crates/services/src/post/: errors.rs  mod.rs
crates/services/src/staff_message/: errors.rs  mod.rs
crates/services/src/staff_request/: errors.rs  mod.rs
crates/services/src/thread/: errors.rs  mod.rs
crates/services/src/user/: errors.rs  mod.rs
crates/storage-adapters/: Cargo.toml  README.md
crates/storage-adapters/src/: lib.rs
crates/storage-adapters/src/cache/: board_config.rs  mod.rs
crates/storage-adapters/src/dnsbl/: mod.rs
crates/storage-adapters/src/in_memory/: mod.rs  rate_limiter.rs  session_repository.rs
crates/storage-adapters/src/media/: documents.rs  images.rs  local_fs.rs  mod.rs  s3.rs  videos.rs
crates/storage-adapters/src/migrations/: 001_create_users.sql  002_create_boards.sql  003_create_board_configs.down.sql  003_create_board_configs.sql  004_create_board_ownership.down.sql  004_create_board_ownership.sql  005_create_threads.sql  006_create_posts.down.sql  006_create_posts.sql  007_create_attachments.sql  008_create_bans.down.sql  008_create_bans.sql  009_create_flags.sql  010_create_audit_logs.down.sql  010_create_audit_logs.sql  011_create_staff_requests.down.sql  011_create_staff_requests.sql  012_create_staff_messages.down.sql  012_create_staff_messages.sql  013_create_user_sessions.down.sql  013_create_user_sessions.sql  014_cycle_and_dedup.down.sql  014_cycle_and_dedup.sql  015_archive.down.sql  015_archive.sql  016_board_config_max_threads.down.sql  016_board_config_max_threads.sql
crates/storage-adapters/src/postgres/: connection.rs  mod.rs
crates/storage-adapters/src/postgres/repositories/: archive_repository.rs  audit_repository.rs  ban_repository.rs  board_repository.rs  flag_repository.rs  mod.rs  post_repository.rs  session_repository.rs  staff_message_repository.rs  staff_request_repository.rs  thread_repository.rs  user_repository.rs
crates/storage-adapters/src/redis/: connection.rs  mod.rs
crates/storage-adapters/src/stubs/: mod.rs
docs/: ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  DESIGN.md  PORTS.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  TECHNICALSPECS.md  api.md  contributing.md  deployment.md  performance.md  setup.md  testing.md
scripts/: backup.sh  deploy.sh  live_test.sh  migrate.sh  restore.sh  seed.sh
static/css/: custom_theme.css.example  dark.css  dark_style.css  style.css  yotsuba.css
static/js/: app.js  custom_scripts.js.example  main.js  theme.js.example
templates/: README.md  audit_log.html  base.html  board.html  board_owner_top_dashboard.html  dashboard.html  janitor_dashboard.html  login.html  mod_bans.html  moderator_dashboard.html  overboard.html  thread.html
templates/components/: flash.html  pagination.html  post.html  quote.html  thread_preview.html
tests/adapter_contracts/: mod.rs  port_contracts.rs
tests/integration/: api_admin.rs  api_auth.rs  api_board.rs  api_board_owner.rs  api_moderation.rs  api_post.rs  media_upload.rs
tests/unit/: mod.rs  (+1 more)
(+16 files in other folders)
