[workspace]
resolver = "2"
members = [
    "cmd/rusty-board",
    "cmd/seed",
    "crates/domains",
    "crates/services",
    "crates/storage-adapters",
    "crates/auth-adapters",
    "crates/api-adapters",
    "crates/configs",
    "crates/integration-tests",
]

[workspace.dependencies]

# ── Core ────────────────────────────────────────────────────────────────────
async-trait         = "0.1"
anyhow              = "1.0"
thiserror           = "2.0"
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
chrono              = { version = "0.4", features = ["serde"] }
uuid                = { version = "1.10", features = ["v4", "fast-rng", "serde"] }
tokio               = { version = "1", features = ["full"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["json", "env-filter"] }
bytes               = "1.6"
mime                = "0.3"
mime_guess          = "2.0"
once_cell           = "1.19"
dashmap             = "6.1"
base64              = "0.22"

# ── Config ───────────────────────────────────────────────────────────────────
config              = "0.15"
dotenvy             = "0.15"
secrecy             = { version = "0.10", features = ["serde"] }
zeroize             = "1.8"

# ── Web (feature: web-axum) ──────────────────────────────────────────────────
axum                = { version = "0.8", features = ["multipart"] }
tower-http          = { version = "0.6", features = ["trace", "cors", "compression-gzip", "request-id", "fs"] }
tower               = { version = "0.5", features = ["util"] }

# ── Database (feature: db-postgres) ──────────────────────────────────────────
sqlx                = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate", "json"] }

# ── Cache / Rate limiting (feature: redis) ───────────────────────────────────
deadpool-redis      = "0.23"

# ── Auth (feature: auth-jwt) ─────────────────────────────────────────────────
argon2              = { version = "0.5", features = ["std"] }
jsonwebtoken        = { version = "10.3", default-features = false, features = ["rust_crypto"] }
rand                = "0.10"

# ── Media — always compiled ───────────────────────────────────────────────────
image               = "0.25"
oxipng              = "10.1"

# ── Media — feature-gated ────────────────────────────────────────────────────
ffmpeg-next         = "8.0"
pdfium-render       = "0.8"
aws-sdk-s3          = { version = "1.124"}
aws-config          = { version = "1.5" }
rustls              = { version = "0.23", default-features = false, features = ["ring"] }

# ── Templates ────────────────────────────────────────────────────────────────
askama              = "0.15"

# ── Observability ────────────────────────────────────────────────────────────
prometheus-client   = "0.24"

# ── Testing (dev only) ───────────────────────────────────────────────────────
mockall             = "0.14"
testcontainers      = "0.20"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }
reqwest             = { version = "0.12", features = ["json", "multipart"] }
insta               = "1.38"
fake                = "2.9"
tokio-test          = "0.4"
