[package]
name    = "auth-adapters"
version = "0.1.0"
edition = "2021"

[features]
default    = []
auth-jwt   = ["jsonwebtoken"]
auth-cookie = ["base64", "storage-adapters"]  # v1.1+

[dependencies]
domains    = { path = "../domains" }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
tracing    = { workspace = true }
argon2     = { workspace = true }
tokio      = { workspace = true }
uuid       = { workspace = true }
async-trait = { workspace = true }

jsonwebtoken = { workspace = true, optional = true }
base64       = { workspace = true, optional = true }
storage-adapters = { path = "../storage-adapters", optional = true }

[dev-dependencies]
tokio            = { workspace = true }
storage-adapters = { path = "../storage-adapters" }
