[package]
name = "rb-api"
version.workspace = true
edition.workspace = true

[dependencies]
rb-core = { path = "../rb-core" }
rb-ui = { path = "../rb-ui" }
actix-web = "4.0"
actix-multipart = "0.6"
actix-cors = "0.6"
askama = "0.12"
futures-util = "0.3"
html-escape = "0.2"
serde_json = "1.0"
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
log = "0.4"